--- a/.env
+++ b/.env
@@ -5,18 +5,18 @@ TODOS_API_ADDRESS=http://todos-api:8082
 
 # auth-api:
 AUTH_API_PORT=8081
-JWT_SECRET=myfancysecret
+JWT_SECRET=nA2EHvL3+TONGbJhA0WcDhAieByBGgU1n66/M1fNMyo=
 USERS_API_ADDRESS=http://users-api:8083
 
 # todos-api:
-JWT_SECRET=myfancysecret
+JWT_SECRET=nA2EHvL3+TONGbJhA0WcDhAieByBGgU1n66/M1fNMyo=
 REDIS_HOST=redis-queue
 REDIS_PORT=6379
 REDIS_CHANNEL=log_channel
 
 # users-api:
 SERVER_PORT=8083
-JWT_SECRET=myfancysecret
+JWT_SECRET=nA2EHvL3+TONGbJhA0WcDhAieByBGgU1n66/M1fNMyo=
 
 # log-message-processor:
 REDIS_HOST=redis-queue
@@ -25,6 +25,11 @@ REDIS_CHANNEL=log_channel
 
 #login details
 # USERNAME    PASSWORD
-admin Admin123
-hng HngTech
-user Password
+#admin Admin123
+#hng HngTech
+#user Password
+
+# --- DOMAIN AND SECURITY CONFIGURATION ---
+DOMAIN_NAME=freewebuniverse.mooo.com
+ACME_EMAIL=muktarakinola.devops@gmail.com  # Required for SSL certificate generation
+JWT_SECRET=nA2EHvL3+TONGbJhA0WcDhAieByBGgU1n66/M1fNMyo=  # Change this to a random secure string
