--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
 # frontend:
-PORT=8080
-AUTH_API_ADDRESS=http://auth-api:8081
-TODOS_API_ADDRESS=http://todos-api:8082
+#PORT=8080
+#AUTH_API_ADDRESS=http://auth-api:8081
+#TODOS_API_ADDRESS=http://todos-api:8082
+
+# NEW (Public URLs - Good for Browser)
+# We use the /api/ prefix because that is how we configured Traefik labels!
+AUTH_API_ADDRESS=https://freewebuniverse.mooo.com/api/auth
+TODOS_API_ADDRESS=https://freewebuniverse.mooo.com/api/todos
 
 # auth-api:
 AUTH_API_PORT=8081
