--- a/users-api/Dockerfile
+++ b/users-api/Dockerfile
@@ -1,6 +1,6 @@
 # STAGE 1: Build the application using a valid Maven image
 # UPDATED: Changed from the invalid 3.8.7 tag to a standard 3.9 tag
-FROM maven:3.9-eclipse-temurin-17 as build
+FROM maven:3.8.7-openjdk-8 as build
 WORKDIR /app
 # Copy the project configuration
 COPY pom.xml .
@@ -10,7 +10,7 @@ COPY src ./src
 RUN mvn clean package -DskipTests
 
 # STAGE 2: Minimal Java Runtime Environment
-FROM eclipse-temurin:17-jre-alpine
+FROM eclipse-temurin:8-jre-alpine
 WORKDIR /app
 # Copy the JAR from the build stage
 # The wildcard *.jar ensures we catch the file regardless of the specific version name
