--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     image: traefik:v2.11 # Fixes Docker API version compatibility
     container_name: traefik
     command:
-      - --entrypoints.web.address=:80
+      #- --entrypoints.web.address=:80
+      - --entrypoints.websecure.forwardauth.address=https://freewebuniverse.chickenkiller.com/api/auth
       - --entrypoints.websecure.address=:443
       - --providers.docker=true
       - --providers.docker.exposedbydefault=false
@@ -19,6 +20,8 @@ services:
       - --certificatesresolvers.letsencrypt.acme.email=${ACME_EMAIL}
       - --certificatesresolvers.letsencrypt.acme.storage=/etc/traefik/acme.json
       # Staging caserver line is omitted/commented out here for production
+      - --middlewares.login-redirect.redirectregex.regex=^https://(.*)/login$
+      - --middlewares.login-redirect.redirectregex.replacement=https://$${1}/api/auth/login
     ports:
       - "80:80"
       - "443:443"
@@ -39,7 +42,7 @@ services:
       - "traefik.http.routers.frontend.entrypoints=websecure"
       - "traefik.http.routers.frontend.tls.certresolver=letsencrypt"
       - "traefik.http.services.frontend.loadbalancer.server.port=80"
-
+      - "traefik.http.routers.frontend.middlewares=login-redirect@docker"
   # 3. Auth API (Go) - Handles /api/auth/* requests
   auth-api:
     build:
@@ -49,7 +52,8 @@ services:
       - .env
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.auth-api.rule=Host(`${DOMAIN_NAME}`) && PathPrefix(`/api/auth`)"
+      #- "traefik.http.routers.auth-api.rule=Host(`${DOMAIN_NAME}`) && PathPrefix(`/api/auth`)"
+      - "traefik.http.routers.auth-api.rule=Host(`${DOMAIN_NAME}`) && (PathPrefix(`/api/auth`) || Path(`/login`))"
       - "traefik.http.routers.auth-api.entrypoints=websecure"
       - "traefik.http.routers.auth-api.tls.certresolver=letsencrypt"
       
